crates/graphcal-project/tests/snapshots/error_snapshots__error_unknown_attribute.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
unknown attribute `foobar`
    Diagnostic severity: error
Begin snippet for unknown_attribute.gcl starting at line 1, column 1

snippet line 1: // Error: unknown attribute name
snippet line 2: #[foobar]
    label at line 2, columns 1 to 9: unknown attribute
snippet line 3: param x: Dimensionless = 1.0;
diagnostic help: recognized attributes are `#[assumes(...)]`, `#[expected_fail]`, `#[hidden]`, and `#[lazy]`
diagnostic code: graphcal::A007
