crates/graphcal-project/tests/snapshots/error_snapshots__error_unknown_const_ref.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
unknown Term `UNKNOWN` in module `unknown_const_ref`
    Diagnostic severity: error
Begin snippet for unknown_const_ref.gcl starting at line 1, column 1

snippet line 1: // Unknown constant reference: UNKNOWN is never declared
snippet line 2: node x: Dimensionless = UNKNOWN + 1.0;
    label at line 2, columns 25 to 31: error here
diagnostic code: graphcal::E001
