crates/graphcal-project/tests/snapshots/error_snapshots__error_unknown_dimension.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
unknown dimension `NoSuchDim`
    Diagnostic severity: error
Begin snippet for unknown_dimension.gcl starting at line 1, column 1

snippet line 1: param x: NoSuchDim = 1.0;
    label at line 1, columns 10 to 18: unknown dimension
diagnostic help: dimension must be declared or part of the prelude
diagnostic code: graphcal::D004
