crates/graphcal-project/tests/snapshots/error_snapshots__error_variant_literal_in_node.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
variant literal `Phase#Design` of `pub(bind) index` cannot be used in the defining file
    Diagnostic severity: error
Begin snippet for variant_literal_in_node.gcl starting at line 11, column 1

snippet line 11: };
snippet line 12: node design_cost: Dimensionless = @cost[Phase#Design];
    label at line 12, columns 41 to 52: variant literal of pub(bind) index
diagnostic help: pub(bind) indexes may be overridden by importers; use `param` declarations for variant-specific values, or abstract over the index via `for p : I { … }`
diagnostic code: graphcal::V004
